src/test/ui/error-codes/E0730.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/E0730.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0730]: cannot pattern-match on an array without a fixed length
  --> $DIR/E0730.rs:6:9
   |
LL |         [1, 2, 3] => true,
   |         ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0730`.
